Fixed wrap on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ body {
 
 .row{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   align-items: stretch;
   justify-content: center;
